# niwrap-helper

./: .gitignore  .pre-commit-config.yaml  README.md  _version.py  pyproject.toml
.github/workflows/: docs.yaml  publish.yaml  test.yaml
scripts/: generate_bids_tools.py
src/niwrap_helper/: __init__.py  bids.py  bids2table.py  niwrap.py  styx.py  types.py
tests/: test_bids.py  test_bids2table.py  test_niwrap.py
